--- a/public/style.css
+++ b/public/style.css
@@ -1,137 +1,93 @@
-html, body {
-    height: 100% !important;
-	width: 100%;
-    margin: 0;
-   box-sizing: border-box;
-  }
-  
-  .mid-content {
-    flex-grow: 1;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container-fluid {
-    display: flex;
-    flex-flow: column;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  .scrollable {
-  height: 50%;
-  overflow-y: scroll;
-}
-.setHeight {
-	height: 50%
-}
 
-table {
-  margin: 0 auto;
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
   text-align: center;
-  border-collapse: collapse;
-  border: 1px solid #d4d4d4;
-  font-size: 20px;
-  background: #fff;
-  width:100%;
-}
- .tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-}
+  border-radius: 6px;
+  padding: 5px 0;
 
-/* Style the buttons inside the tab */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 17px;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-  display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
-}
-table th, 
-table tr:nth-child(2n+2) {
-  background: #e7e7e7;
-}
-  
-table th, 
-table td {
-  padding: 20px 50px;
-}
-  
-table th {
-  border-bottom: 1px solid #d4d4d4;
-}
-.stars-outer {
-  display: inline-block;
-  position: relative;
-  font-family: FontAwesome;
-}
- 
-.stars-outer::before {
-  content: "\f006 \f006 \f006 \f006 \f006";
-}
- 
-.stars-inner {
+  /* Position the tooltip */
   position: absolute;
-  top: 0;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+.playerBox {
+  height: 150px;
+  width: 10%;
+  display: block;
+  float: left;
+  margin: 10px;
+}
+
+.playerRemove {
+  margin-right:0;
+  margin-top:0;
+}
+
+.playerAdd{
+  height:100%;
+  width:100%;
+  margin:0px;
+  opacity: .2; 
+  font-size: 100px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
   left: 0;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 0;
-}
- 
-.stars-inner::before {
-  content: "\f005 \f005 \f005 \f005 \f005";
-  color: #f8ce0b;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-  .jumbotron {
-    margin: 0px;
-    padding: 0;
-    text-align: center;
-    background-color:white;
-  }
-  
-  .row{
-    margin:0;
-    padding: 0;
-  }
-  
-  
-  .info-container{
-    margin:0;
-    padding: 0;
-    background-color:gray;
-	height:100%;
-  }
-  
-  .map-container {
-    margin:0;
-    padding: 0;
-  }
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
 
-  #map {
-    height:100%;
-  }
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#resultsDiv {
+overflow-y: auto;
+  max-height: 300px;
+}
+
+#team1Container, #team1StatContainer {
+    clear: both;
+    display: block;
+    padding-bottom: 30px;
+}
+
+.contentContainer {
+  margin: 20px;;
+}
