Added new team stats and some good comments

--- a/public/style.css
+++ b/public/style.css
@@ -91,3 +91,12 @@ overflow-y: auto;
 .contentContainer {
   margin: 20px;;
 }
+
+.newPlayerStats{
+  height: 300px;
+  width: 250px;
+  float: left;
+  display: block;
+  margin-right: 10px;
+  text-align: center;
+}
