--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,23 @@
 
+html, body {
+  height: 100%;
+}
+body {
+  background: linear-gradient(#dccf39 -10%, #b65e00 180%);
+  background-size: cover;
+  background-position: center center;
+  min-height: 100%;
+}
+
+.team1InfoTitle {
+  display: flex;
+  width: 100%;
+  background-color: black;
+  opacity: 0.75;
+  color: white;
+  padding: 
+}
+
 .tooltip .tooltiptext {
   visibility: hidden;
   width: 120px;
@@ -7,6 +26,7 @@
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
+  font-family: arial;
 
   /* Position the tooltip */
   position: absolute;
@@ -17,12 +37,38 @@
   visibility: visible;
 }
 
+input[type="text"]{
+  font-family: 'Bebas Neue';
+  font-size: 14px;
+  color: grey;
+  width: 30%;
+}
+
+.team {
+  width: 100%;
+  height: 130px;
+  margin: 20px;
+  align-self: center;
+  text-align: center
+}
+
 .playerBox {
   height: 150px;
   width: 10%;
-  display: block;
-  float: left;
+  display: inline-block;
+  float: center;
   margin: 10px;
+  -webkit-transition: -webkit-box-shadow 0.5s ease-out, opacity 0.5s ease-out;
+  -moz-transition: -moz-box-shadow 0.5s ease-out, opacity 0.5s ease-out;
+  transition: box-shadow 0.5s ease-out, opacity 0.5s ease-out;
+}
+
+.playerBox:hover {
+  -webkit-box-shadow: 2px 12px 10px rgba(0,0,0,0.3);
+  -moz-box-shadow: 2px 12px 10px  rgba(0,0,0,0.3);
+  box-shadow: 2px 12px 10px rgba(0,0,0,0.3);
+  opacity: 1;
+  cursor: pointer;
 }
 
 .playerRemove {
@@ -38,6 +84,14 @@
   font-size: 100px;
 }
 
+[contenteditable="true"]{
+  text-align: center;
+  font-family: 'Bebas Neue';
+  color: grey;
+  font-size: 40px;
+  margin: 10px;
+}
+
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
@@ -51,10 +105,12 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  font-family: arial;
 }
 
 /* Modal Content */
 .modal-content {
+  border-radius: 15px;
   background-color: #fefefe;
   margin: auto;
   padding: 20px;
@@ -82,6 +138,17 @@ overflow-y: auto;
   max-height: 300px;
 }
 
+#team1StatContainer {
+  display: flex;
+  flex-flow: column;
+  max-width: 100%;
+  width: 1000px;
+  background-color: white;
+  opacity: 0.95;
+  padding: 15px 30px;
+  margin: 0 auto 30px;
+}
+
 #team1Container, #team1StatContainer {
     clear: both;
     display: block;
@@ -89,7 +156,8 @@ overflow-y: auto;
 }
 
 .contentContainer {
-  margin: 20px;;
+  margin: 20px;
+  font-family: arial;
 }
 
 .newPlayerStats{
