--- a/public/style.css
+++ b/public/style.css
@@ -3,10 +3,24 @@ html, body {
   height: 100%;
 }
 body {
-  background: linear-gradient(#dccf39 -10%, #b65e00 180%);
-  background-size: cover;
-  background-position: center center;
+  background-image: url("basketball.png");
+  background-size: 40%;
+  background-position: 900px center;
+  background-repeat: no-repeat;
   min-height: 100%;
+}
+
+h1 {
+  font-family: 'Bungee', cursive;
+}
+
+ul {
+  width: 100%;
+}
+
+ul#playerNames li {
+  display: inline;
+  padding: 5%;
 }
 
 .team1InfoTitle {
@@ -45,11 +59,26 @@ input[type="text"]{
 }
 
 .team {
+  display: inline-block;
   width: 100%;
   height: 130px;
   margin: 20px;
   align-self: center;
-  text-align: center
+  text-align: center;
+}
+
+.playerNames {
+  position: relative;
+  margin: 5px 80px;
+  width: 100%;
+  font-size: 18px;
+  text-align: center;
+}
+
+label {
+  display: inline;
+  margin-right: 6.4em;
+  padding-top: 1.0em;
 }
 
 .playerBox {
@@ -80,7 +109,7 @@ input[type="text"]{
   height:100%;
   width:100%;
   margin:0px;
-  opacity: .2; 
+  opacity: .8; 
   font-size: 100px;
 }
 
