--- a/public/style.css
+++ b/public/style.css
@@ -135,6 +135,7 @@ label {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   font-family: arial;
+  text-align: center;
 }
 
 /* Modal Content */
@@ -144,7 +145,8 @@ label {
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 400px;
+  height: 400px;
 }
 
 /* The Close Button */
@@ -171,7 +173,7 @@ overflow-y: auto;
   display: flex;
   flex-flow: column;
   max-width: 100%;
-  width: 1000px;
+  width: 1300px;
   background-color: white;
   opacity: 0.95;
   padding: 15px 30px;
@@ -197,3 +199,33 @@ overflow-y: auto;
   margin-right: 10px;
   text-align: center;
 }
+
+
+#searchText {
+  width: 100%;
+}
+
+#resultsDiv {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  margin-top: 5px;
+  height: 350px;
+}
+
+.resultButton {
+  width: 95%;
+  background-color: #008CBA;
+  border: none;
+  color: white;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  height: 50px;
+  margin: 2px;
+
+}
+
+.resultButton:hover {opacity: 1}
